Added the "ClassifierActivity" layout**
**Important note: Instead of a "ImageView" element, the line below should contain a "com.camerakit.CameraKitView". However, it requires API 24 to be used which is currently unavailable to be used by my current device. You may check a fully working version of this over at the "android-test" branch. The issue will be resolved shortly! :D

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,8 @@
 
             app:layout_constraintStart_toEndOf="@id/guideline_left_15percent"
             app:layout_constraintEnd_toEndOf="@id/guideline_left_85percent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:onClick="nextScreen"/>
 
         <TextView
             android:id="@+id/scan_text"
